<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myrect"
    tools:context=".AUTO_REPLY.activity.main.MainAutoReplyActivity">


    <!-- Main Auto Reply enable switch -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mainAutoReplySwitchCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@id/mainAutoReplyTextCardView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/mainAutoReplySwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:text="@string/mainAutoReplySwitchOffLabel" />
                </com.google.android.material.card.MaterialCardView>

                <!-- Custom auto reply text card -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mainAutoReplyTextCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/mainAutoReplySwitchCardView"
                    tools:layout_editor_absoluteX="134dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:text="@string/mainAutoReplyLabel"
                            android:textColor="?attr/colorOnSurface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="3"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="10dp"
                            android:text="@string/mainAutoReplyTextPlaceholder"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <ImageView
                            android:id="@+id/imageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/mainAutoReplyEditBtnTooltip"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_create_24"
                            tools:ignore="VectorDrawableCompat" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Supported app selector checklist empty card.
        Actual checklist will be generated at runtime -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/supportedAppsSelectorCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/mainAutoReplyTextCardView"
                    tools:layout_editor_absoluteX="134dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp">

                        <TextView
                            android:id="@+id/selectAppsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/enable_for_apps"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/editEnabledAppsButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/mainAutoReplyEditBtnTooltip"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_baseline_create_24"
                            tools:ignore="VectorDrawableCompat" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/enabled_apps_list"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingBottom="8dp"
                            app:layout_constraintEnd_toStartOf="@+id/editEnabledAppsButton"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/selectAppsLabel" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Group reply switch card -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/groupReplySwitchCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/supportedAppsSelectorCardView"
                    tools:layout_editor_absoluteX="154dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/groupReplySwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="5dp"
                        android:padding="20dp"
                        android:text="@string/groupReplySwitchLabel" />
                </com.google.android.material.card.MaterialCardView>

                <!-- Reply frequency Time picker -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/replyFrequencyTimePickerCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/groupReplySwitchCardView"
                    tools:layout_editor_absoluteX="134dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp">

                        <TextView
                            android:id="@+id/timePickerTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="10dp"
                            android:text="@string/time_picker_title"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/timePickerSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxWidth="250dp"
                            android:maxLines="3"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/time_picker_sub_title_default"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/timePickerTitle" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/frequencySetterWidget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/imgMinus"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_baseline_remove_24"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/timeSelectedText"
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:inputType="number"
                                android:text="0"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="@id/imgMinus"
                                app:layout_constraintStart_toEndOf="@+id/imgMinus"
                                app:layout_constraintTop_toTopOf="@+id/imgMinus" />

                            <ImageView
                                android:id="@+id/imgPlus"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_baseline_add_24"
                                app:layout_constraintStart_toEndOf="@+id/timeSelectedText"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            <!-- Reply frequency Time picker -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/replyFrequencyTimePickerCardVieww"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    app:layout_constraintTop_toBottomOf="@+id/replyFrequencyTimePickerCardView"
                    tools:layout_editor_absoluteX="134dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="5dp">

                        <com.google.android.gms.ads.AdView
                            android:id="@+id/adView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:visibility="visible"
                            app:adSize="BANNER"
                            app:adUnitId="ca-app-pub-3197714952509994/5508619306"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>